--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==3.0.1
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.1.5
+django-cors-headers==3.13.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
 idna==3.4
 inflection==0.5.1
@@ -16,6 +18,8 @@ MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==23.0
 psycopg2-binary==2.9.5
+PyJWT==2.6.0
+python-decouple==3.7
 pytz==2022.7
 requests==2.28.2
 ruamel.yaml==0.17.21
