--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==23.0
+peewee==3.15.4
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-decouple==3.7
