--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==4.1.5
 django-cors-headers==3.13.0
+django-filter==22.1
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -18,6 +19,7 @@ MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==23.0
 peewee==3.15.4
+Pillow==9.4.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-decouple==3.7
